# harmonica-os

./: .gitignore  ARCHITECTURE.md  BETA-TEST.md  CLAUDE.md  README.md  RELEASE-CHECKLIST.md  TODO.md  USER-GUIDE.md  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: keypress.rs  lib.rs  main.rs
apps/web/: next.config.ts  package.json
apps/web/public/: manifest.json
apps/web/public/worklets/: pitch-processor.js
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/calibrate/: page.tsx
apps/web/src/app/control/: page.tsx
apps/web/src/app/debug/: page.tsx
apps/web/src/app/learn/: page.tsx
apps/web/src/app/select/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/app/setup/: page.tsx
apps/web/src/components/audio/: level-meter.tsx
apps/web/src/components/harmonica/: command-log.tsx  key-selector.tsx  pitch-display.tsx
apps/web/src/components/layout/: nav.tsx
apps/web/src/components/shared/: button.tsx  card.tsx  error-boundary.tsx  page-header.tsx  status-badge.tsx
apps/web/src/hooks/: use-audio-engine.ts  use-microphone.ts  use-pitch-detector.ts  use-settings.ts
apps/web/src/lib/: runtime.ts
apps/web/src/lib/accessibility/: a11y.ts
apps/web/src/lib/audio/: engine.ts  microphone.ts
apps/web/src/lib/calibration/: calibration.ts  matcher.ts
apps/web/src/lib/pitch/: yin.ts  (+2 more)
apps/web/src/types/: app.ts  audio.ts  calibration.ts  commands.ts  harmonica.ts  index.ts  pitch.ts
docs/: decisions.md
(+5 files in other folders)
