[package]
name = "harmonica-os"
version = "0.1.0"
description = "Control your computer with harmonica playing"
authors = ["Ramsey Musallam"]
license = "MIT"
edition = "2021"

[lib]
name = "harmonica_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = { version = "0.2", features = ["serde"] }
